--- a/treatments.html
+++ b/treatments.html
@@ -101,10 +101,10 @@
   <main>
     <article>
       <!--- #HERO-->
-      <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section>
+      <section class="hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section>
         <div class="container">
           <div class="hero-content">
-            <h1 class="h1 hero-title">Let's Relax Stockholm</h1>
+            <h1 class="h1 hero-title">Treatments</h1>
             <h2 class="hero-subtitle">Experience the  ultimate relaxation and wellness treatments.</h2>
             <p class="hero-subtitle">
               Relax Your mind <strong class="strong">Heal Your Body</strong> Refresh Your Soul
