--- a/wellness.html
+++ b/wellness.html
@@ -122,9 +122,7 @@
           </div>
 
           <div class="hero-banner w-100">
-            <img src="./assets/images/wellness-banner.webp" width="380" height="380" alt="hero banner" >
-            <h2 class="abs-img abs-img-1">Rejuvenate 🧘🏻‍♀️</h2>           
-            <h2 class="abs-img abs-img-2" >Relax 💆🏻‍♀️</h2>          
+            <img src="./assets/images/wellness-banner.webp" width="380" height="380" alt="hero banner" >        
           </div>
         </div>
       </section>
@@ -162,7 +160,7 @@
           </div> 
         
         <div class="container-img">
-        <img src="./assets/blog/Health-Wellness.webp" alt="Health and Wellness certificate" width="400" height="400" style="margin-top: 20px;">
+        <img src="./assets/blog/Health-Wellness.webp" alt="Health and Wellness certificate" width="400" height="400" loading="lazy">
         </div>
         </div>  
       </section>
