--- a/fitness.html
+++ b/fitness.html
@@ -140,7 +140,7 @@
             <img src="./assets/images/about-circle-two.png" width="360" height="334" loading="lazy" aria-hidden="true"
               alt="" class="circle circle-2">
 
-            <img src="./assets/images/fitness.png" width="550" height="154" loading="lazy" alt="fitness"
+            <img src="./assets/images/fitness-banner.webp" width="550" height="154" loading="lazy" alt="fitness"
               class="abs-img w-100">
           </div>
           <div class="about-content">
