--- a/wellness.html
+++ b/wellness.html
@@ -36,7 +36,7 @@
   <link rel="preload" as="image" href="./assets/images/calories.svg">
   <link rel="preload" as="image" href="./assets/images/FirstTime.webp">
   <link rel="preload" as="image" href="./assets/images/weight-lifting.svg">
-  <link rel="preload" as="image" href="./assets/images/fitness-banner.webp">
+  <link rel="preload" as="image" href="./assets/images/fitness-banner">
   <link rel="preload" as="image" href="./assets/images/sports.webp">
   <link rel="preload" as="image" href="./assets/images/reflexology-foot-massage.webp">
   <link rel="preload" as="image" href="./assets/images/Office syndrome.webp">
