--- a/treatments.html
+++ b/treatments.html
@@ -35,18 +35,16 @@
   <link rel="preload" as="image" href="./assets/images/heart-rate.svg">
   <link rel="preload" as="image" href="./assets/images/calories.svg">
   <link rel="preload" as="image" href="./assets/images/FirstTime.webp">
-  <link rel="preload" as="image" href="./assets/images/weight-lifting.svg">
+  <link rel="preload" as="image" href="./assets/images/weight-lifting.webp">
   <link rel="preload" as="image" href="./assets/images/fitness-banner.webp">
   <link rel="preload" as="image" href="./assets/images/sports.webp">
   <link rel="preload" as="image" href="./assets/images/reflexology-foot-massage.webp">
   <link rel="preload" as="image" href="./assets/images/Office syndrome.webp">
   <link rel="preload" as="image" href="./assets/images/Yoga-massage.webp">
   <link rel="preload" as="image" href="./assets/images/stretch.webp">
-  <link rel="preload" as="image" href="./assets/images/back
-  &foot-massage.webp">
+  <link rel="preload" as="image" href="./assets/images/back&foot-massage.webp">
   <link rel="preload" as="image" href="./assets/images/hotoil.webp">
-  <link rel="preload" as="image" href="./assets/images/aromatherapy-massage.web
-  p">
+  <link rel="preload" as="image" href="./assets/images/aromatherapy-massage.webp">
   <link rel="preload" as="image" href="./assets/images/swipe-left.svg">
   <link rel="preload" as="image" href="./assets/images/footer-clock.png">
   <link rel="preload" as="image" href="./assets/blog/Self Care.webp">
