modified style and added images

--- a/about.html
+++ b/about.html
@@ -120,14 +120,14 @@
   <main>
     <article>
       <!--- #HERO-->
-      <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
+      <section class="section hero has-after has-bg-image" id="home" aria-label="hero" data-section
         > 
         <div class="container">
           <div class="hero-content">
-            <h1 class="h1 hero-title">About Us</h1>
+            <h1 class="h1 hero-title">About Me</h1>
             
             <p class="hero-subtitle">
-              <strong class="strong">The Best</strong>Massage and Wellness Hub
+              Helping People Feel Better Since 2012
             </p>
             <br>
             <p class="section-text-about">
