--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
   <main>
     <article>
       <!--- #HERO-->
-      <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section>
+      <section class="section hero has-after has-bg-image" id="home" aria-label="hero" data-section>
         <div class="container">
           <div class="hero-content">
             <h1 class=" h1 hero-title pink">Get in Touch</h1>
