--- a/wellness.html
+++ b/wellness.html
@@ -103,7 +103,7 @@
   <main>
     <article>
       <!--- #HERO-->
-      <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
+      <section class="section hero has-after has-bg-image" id="home" aria-label="hero" data-section
         >
         <div class="container">
           <div class="hero-content">
