--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
           </div>
           <div class="hero-banner">
-            <img src="./assets/images/hero-banner.webp" width="250" height="194" alt="hero banner" class="w-100"> 
+            <img src="./assets/images/spa-time-banner.webp" width="250" height="194" alt="let's relax massage" class="w-100"> 
           </div>
         </div>
       </section>
