--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body id="top">
   <!---#HEADER-->
   <header class="header" data-header>
-    <div class="container">
+    <div class="container bg-dark ">
       <a href="treatments.html" class="logo ">
         <img src="./assets/images/class-yoga-massage.png" width="98" height="98" alt="yoga logo">
         <span class="span">Treatments</span>
@@ -131,9 +131,9 @@
       </section>
 
       <!--- Treatments-->
-      <section class="section class bg-dark has-bg-image" id="class" aria-label="class">
+      <section class="section class has-bg-image" id="class" aria-label="class">
         <div class="container">
-          <h2 class="h2 text-center">Treatments</h2>
+          <h2 class="h2 text-center bg-dark">Treatments</h2>
           <p class="section-text">Let's Relax Stockholm offers a variety of treatments such as Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy
           and Hot coconut oil massage</p>
 
@@ -532,7 +532,7 @@
 
   <footer class="footer">
 
-    <div class="section footer-top bg-dark has-bg-image">
+    <div class="section footer-top has-bg-image">
       <div class="container">
 
         <div class="footer-brand">
@@ -688,7 +688,7 @@
 
   <!--- ionicon link-->
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 </body>
 
