--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 <body id="top">
   <!--- #HEADER-->
   <header class="header" data-header>
-    <div class="container">
+    <div class="container bg-dark">
       <a href="treatments.html" class="logo">
         <img src="./assets/images/class-yoga-massage.png" width="98" height="98" alt="yoga logo">
         <span class="span">Treatments</span>
@@ -156,7 +156,7 @@
 
   <footer class="footer section">
 
-    <div class="section footer-top bg-dark has-bg-image">
+    <div class="section footer-top has-bg-image">
       <div class="container">
 
         <div class="footer-brand">
