--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <h2 class="h2 bg-dark text-center ">Experience the Ultimate Relaxation</h2>
             <P class="section-text">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
             <br>
-            <video controls poster="./assets/images/wellness-banner.webp" class="video-player">
+            <video controls poster="./assets/images/wellness-banner.jpg" class="video-player">
               <source src="./assets/videos/relax.mp4" type="video/mp4" width="450" height="450" alt="Relaxation video">
             </video> 
           </div>
