--- a/fitness.html
+++ b/fitness.html
@@ -214,7 +214,7 @@
                     </h3>
                   </div>
                   <br>
-                  <p class="blog-title">Benefits:</p>
+                  <p class="blog-title-treatment">Benefits:</p>
                   <ul class="card-text">
                     <li>🏋🏻‍♀️ Builds Muscle Strength: Improves overall body strength and endurance.</li>
                     <li>🔥 Burns Calories: Boosts metabolism and helps with weight loss.</li>
@@ -247,7 +247,7 @@
                     </h3>
                   </div>
                   <br>
-                  <p class="blog-title">
+                  <p class="blog-title-treatment">
                     Benefits:
                   </p>
                   <ul class="card-text">
@@ -282,7 +282,7 @@
                     </h3>
                   </div>
                   <br>
-                  <p class="blog-title">
+                  <p class="blog-title-treatment">
                     Benefits:
                   </p>
                   <ul class="card-text">
@@ -318,7 +318,7 @@
                     </h3>
                   </div>
                   <br>
-                  <p class="blog-title">
+                  <p class="blog-title-treatment">
                     Benefits:
                   </p>
                   <ul class="card-text">
