--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Sports Massage
                     </h3>
                   </div>
@@ -178,7 +178,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Reflexology
                     </h3>
                   </div>
@@ -209,7 +209,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Office Syndrome
                     </h3>
                   </div>
@@ -240,7 +240,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Yoga Massage
                     </h3>
                   </div>
@@ -271,7 +271,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Stretch Massage
                     </h3>
                   </div>
@@ -302,7 +302,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Back & Foot Massage 
                     </h3>
                   </div>
@@ -333,7 +333,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Hot Oil Massage 
                     </h3>
                   </div>
@@ -364,7 +364,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title"> 
+                    <h3 class="blog-title-treatment"> 
                       Aromatherapy
                     </h3>
                   </div>
