--- a/treatments.html
+++ b/treatments.html
@@ -145,7 +145,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Sports Massage
                     </h3>
                   </div>
@@ -181,7 +181,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Reflexology
                     </h3>
                   </div>
@@ -218,7 +218,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Head, Shoulder and Back (Office Syndrome) 
                     </h3>
                   </div>
@@ -253,7 +253,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Yoga Massage
                     </h3>
                   </div>
@@ -291,7 +291,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Stretch Massage
                     </h3>
                   </div>
@@ -329,7 +329,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Back & Foot Massage 
                     </h3>
                   </div>
@@ -365,7 +365,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                      Hot Oil Massage 
                     </h3>
                   </div>
@@ -400,7 +400,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Aromatherapy
                     </h3>
                   </div>
@@ -437,7 +437,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="blog-title">
+                    <h3 class="blog-title-treatment">
                       Chi Nei Tsang (Abdominal)
                     </h3>
                   </div>
