--- a/fitness.html
+++ b/fitness.html
@@ -340,7 +340,7 @@
           </ul>
           <div class="swipe" >
           <img class="swipe-icon" src="./assets/images/swipe-left.svg"  alt="Swipe icon"> 
-          <h3 class=" card-text text-center"> Swipe to read more 
+          <h3 class=" card-text text-center bg-back"> Swipe to read more 
           </h3>
           </div>
         </div>
