--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="container">
           <div class="video-player text-center">
             <h2 class="h2 bg-dark text-center ">Experience the Ultimate Relaxation</h2>
-            <P class="section-text">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
+            <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
             <br>
             <video controls poster="./assets/images/wellness-banner.jpg" class="video-player">
               <source src="./assets/videos/relax.mp4" type="video/mp4" width="450" height="450" alt="Relaxation video">
@@ -134,7 +134,7 @@
       <section class="section class has-bg-image" id="class" aria-label="class">
         <div class="container">
           <h2 class="h2 text-center bg-dark">Treatments</h2>
-          <p class="section-text">Let's Relax Stockholm offers a variety of treatments such as Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy
+          <p class="class-subtitle">Let's Relax Stockholm offers a variety of treatments such as Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy
           and Hot coconut oil massage</p>
 
           <ul class="class-list has-scrollbar">
@@ -389,7 +389,7 @@
           </ul>
           <div class="swipe" >
           <img class="swipe-icon" src="./assets/images/swipe-left.svg"  alt="Swipe icon"> 
-          <h3 class=" card-text text-center"> Swipe to read more 
+          <h3 class="bg-back text-center"> Swipe to read more 
           </h3>
           </div>
         </div>
@@ -519,7 +519,7 @@
           </ul>
           <div class="swipe" >
           <img class="swipe-icon" src="./assets/images/swipe-left.svg"  alt="Swipe icon"> 
-          <h3 class=" card-text text-center"> Swipe to read more 
+          <h3 class=" bg-back text-center"> Swipe to read more 
           </h3>
           </div>
         </div>
