--- a/wellness.html
+++ b/wellness.html
@@ -285,9 +285,9 @@
                       Massage is more than a luxury; it's a scientifically-backed method for stress relief that benefits both the body and mind. By improving circulation, reducing cortisol, and fostering relaxation, massage therapy provides a holistic approach to combating stress. </h3> 
                      
                   <br>
-                  <h3 class="card-text-title">
+                  <p class="card-text-title">
                     So the next time you're feeling overwhelmed, remember: the solution might just be in the healing power of touch.  💆🏻‍♀️
-                  </h3>
+                  </p>
                 </div>
               </div>
             </li>          
