--- a/treatments.html
+++ b/treatments.html
@@ -130,13 +130,13 @@
       </section>
 
       <!--- Treatments-->
-      <section class="section class has-bg-image bg-back" id="class" aria-label="class">
+      <section class="section class has-bg-image" id="class" aria-label="class">
         <div class="container">
           <h2 class="section-title text-center">Welllness Treatments</h2>
           <p class="hero-subtitle">
               Relax Your mind <strong class="strong">Heal Your Body</strong> Refresh Your Soul
           </p>
-          <p class="section-subtitle">Pamper yourself with our treatments such as Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy and Hot coconut oil massage</p>
+          <p class="hero-subtitle">Pamper yourself with our treatments such as Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy and Hot coconut oil massage</p>
 
           <ul class="class-list has-scrollbar">
             <li class="scrollbar-item">
@@ -472,7 +472,7 @@
           </ul>
           <div class="swipe" >
           <img class="swipe-icon" src="./assets/images/swipe-left.svg"  alt="Swipe icon"> 
-          <h3 class=" card-text text-center"> Swipe to read more 
+          <h3 class=" card-text text-center bg-back"> Swipe to read more 
           </h3>
           </div>
           <br>
