--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <!-- 
     - Google fonts link
   -->
-  <link rel="preload" as="fonts" href="https://fonts.googleapis.com">
-  <link rel="preload" as="fonts" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Rubik:wght@500&display=swap" rel="stylesheet">
   
   <!--- custom css link-->
   <link rel="stylesheet" href="./assets/css/style.css">
