update image banner

--- a/treatments.html
+++ b/treatments.html
@@ -124,7 +124,7 @@
               <strong class="strong"> peace and wellness </strong>  
             </p>
             <br>
-            <img src="./assets/images/best-massage.webp" width="250" height="194" alt="hero banner" class="w-100">
+            <img src="./assets/images/best-massage.jpeg" width="250" height="194" alt="hero banner" class="w-100">
           </div>
         </div>
       </section>
