--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
           </a>
 
           <p class="footer-brand-text">
-            Let's Relax Massage Stockholm
+            Let's Relax Stockholm
           </p>
 
           <div class="wrapper">
