--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       
           <div class="hero-banner">
             <p class="hero-subtitle">
-              <strong class="strong">The Best</strong>Massage and Wellness Hub
+              <strong class="strong">The Best</strong>Massage & Wellness Hub
             </p>
           
             <img src="./assets/images/spa-time-banner.webp" width="250" height="194" alt="let's relax massage" class="w-100"> 
@@ -550,7 +550,7 @@
           </a>
 
           <p class="footer-brand-text">
-            Let's Relax Massage Stockholm
+            Let's Relax Stockholm
           </p>
 
           <div class="wrapper">
