--- a/treatments.html
+++ b/treatments.html
@@ -697,12 +697,12 @@
           <li class="footer-list-item">
             <div class="icon">
               <a href="contact.html#map">
-              <ion-icon name="location" aria-hidden="true"></ion-icon></a>
+              <ion-icon name="location" aria-hidden="true"></ion-icon>
             </div>
 
             <address class="address footer-link">
               Fridhemsgatan 28, 112 40 Stockholm, Sweden
-            </address>
+            </address></a>
           </li>
 
           <li class="footer-list-item">
@@ -733,7 +733,7 @@
 
           <li class="footer-list-item">
               <a target="_blank" href="https://www.facebook.com/letsrelaxstockholm" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon> </a> 
+              <ion-icon name="logo-facebook"></ion-icon></a>
               <p>Facebook</p>
           </li>
 
