--- a/wellness.html
+++ b/wellness.html
@@ -604,12 +604,12 @@
           <li class="footer-list-item">
             <div class="icon">
               <a href="contact.html#map">
-              <ion-icon name="location" aria-hidden="true"></ion-icon></a>
+              <ion-icon name="location" aria-hidden="true"></ion-icon>
             </div>
 
             <address class="address footer-link">
               Fridhemsgatan 28, 112 40 Stockholm, Sweden
-            </address>
+            </address></a>
           </li>
 
           <li class="footer-list-item">
