--- a/wellness.html
+++ b/wellness.html
@@ -134,8 +134,8 @@
         <div class="container">
           <div class="about-content">
 
-            <h2 class="h2 section-title">
-              About Health and Wellness
+            <h2 class="section-title">
+              Health & Wellness Tips
             </h2>
 
             <p class="section-text">
@@ -169,7 +169,8 @@
 <!--- #Wellness -->
       <section class="section blog container" id="blog" aria-label="blog">
         <div class="section blog-feed">
-          <h2 class="hero-subtitle "><strong class="strong">Latest</strong> Blog Feed 👩🏻‍💻</h2>
+          <h2 class="hero-subtitle text-center">Latest
+             Blog Feed 👩🏻‍💻</h2>
         </div>
         <!-- #Blog-3-->
         <div class="container">
