--- a/fitness.html
+++ b/fitness.html
@@ -651,7 +651,8 @@
 
     <div class="footer-bottom">
         <p class="copyright">
-          &copy; 2025 Let's Relax Stockholm | All Rights Reserved
+          <span class="nowrap"><time id="year"> </time> &copy; </time> </span>
+          <span class="nowrap"> Let's Relax Stockholm </span> | All Rights Reserved
         </p>
     </div>
   </footer>
