--- a/about.html
+++ b/about.html
@@ -292,7 +292,9 @@
     <div class="footer-bottom">
 
         <p class="copyright">
-          <span class="nowrap"><time id="year"> </time> &copy; </time> </span>
+          <span class="nowrap">&copy;
+            <time id="year"> </time>
+          </span>
           <span class="nowrap"> Let's Relax Stockholm </span> | All Rights Reserved
         </p>
     </div>
