--- a/about.html
+++ b/about.html
@@ -236,7 +236,7 @@
             </div>
 
             <address class="address footer-link">
-              Fridhemsgatan 28, 112 40 Stockholm, Sweden
+              Wallingatan 37, 111 24 Stockholm, Sweden
             </address></a>
           </li>
 
