--- a/contact.html
+++ b/contact.html
@@ -115,9 +115,9 @@
             <p class="section-text">Saturday - Sunday : 10.00 - 18.00</p>
 
             <P class="hero-subtitle"> Holidays 2025 : </P>
-            <p class="section-text">18 April - 21 April</p>
+            <p class="section-text">01 June - 08 June</p>
             <p class="section-text">20 June - 22 June</p>
-            <p class="section-text">23 Dec - 28 Dec​​</p>
+            <p class="section-text">24 Dec - 26 Dec​​</p>
              
             <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
           </div>
@@ -134,9 +134,9 @@
               <strong class="strong">No Walk-ins</strong>Appointment Only! 
             </p>
             <p class="section-text">
-                Fridhemsgatan 28
-            (Inside Danshuset City)
-              Fridhemsplan Station</p>
+                Wallingatan 37
+            (Inside 85 Kliniken) just a 5-minute walk from the Arlanda Express terminal and Stockholm Central Station (T-Centralen)
+              </p>
           </div>
         <div class="img">
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8140.013054363591!2d18.019176643485444!3d59.332899340045174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d5fb784ce65%3A0x1b1af122c0db19cf!2sLet%E2%80%99s%20Relax%20Best%20Massage%20Stockholm!5e0!3m2!1sen!2sse!4v1732303620154!5m2!1sen!2sse"  width="400" height="400" style="border:0; " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
