--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
               <strong class="strong">Wallingatan 37</strong>Inside 85 Kliniken 
             </p>
             <p class="section-text">   
-             Just a 5-minute walk from Clarion Hotel Sign, the Arlanda Express terminal and Stockholm Central Station (T-Centralen)
+             Just a 5-minute walk from Clarion Hotel Sign, near the Arlanda Express terminal and Stockholm Central Station (T-Centralen)
             </p>
           </div>
         <div class="img">
