--- a/contact.html
+++ b/contact.html
@@ -152,13 +152,13 @@
           
           <div class="hero-content text-center">
             <h2 class="contact-title">🌸 Promotion 🌸</h2>
-            <img class="img" src="./assets/images/firsttime.png" width="360" height="348" loading="lazy" alt="about banner"
+            <img class="img" src="./assets/images/Summer.png" width="360" height="348" loading="lazy" alt="about banner"
               >
                 
           </div>
 
           <div class="about-content">
-            <h2 class="hero-subtitle"> <strong class="strong">First time 20% off!</strong>
+            <h2 class="hero-subtitle"> <strong class="strong">Summer 20% off!</strong>
               </h2>
             <br>
             <img class="img" src="./assets/images/massage-me.JPG" width="360" height="348" loading="lazy" alt="Treatment room"
