--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@
           </div>
 
           <div class="about-content">
-            <h2 class="hero-subtitle"> <strong class="strong">Summer 20% off!</strong>
+            <h2 class="hero-subtitle"> <strong class="strong">🌸 Summer 20% off! 🌸</strong>
               </h2>
             <br>
             <img class="img" src="./assets/images/massage-me.JPG" width="360" height="348" loading="lazy" alt="Treatment room"
