--- a/fitness.html
+++ b/fitness.html
@@ -562,7 +562,7 @@
           </li>
 
           <li>
-            <a href="#top" class="footer-link">Home</a>
+            <a href="index.html" class="footer-link">Home</a>
           </li>
 
           <li>
