--- a/wellness.html
+++ b/wellness.html
@@ -609,7 +609,7 @@
             </div>
 
             <address class="address footer-link">
-              Fridhemsgatan 28, 112 40 Stockholm, Sweden
+              Wallingatan 37, 111 24 Stockholm, Sweden
             </address></a>
           </li>
 
