--- a/treatments.html
+++ b/treatments.html
@@ -484,7 +484,7 @@
               Sports massage, Yoga massage and Stretch massage isn't typically recommended for pregnant women.  
           </p>
           <pre class="hero-subtitile">
-            <ul>These treatments are also not suitable for individuals with any of the following conditions:
+            <ul class="hero-subtitile">These treatments are also not suitable for individuals with any of the following conditions:
 
             <li>History of high blood pressure</li>
             
