--- a/treatments.html
+++ b/treatments.html
@@ -483,7 +483,7 @@
           <p class="hero-subtitle" >
               Sports massage, Yoga massage and Stretch massage isn't typically recommended for pregnant women.  
           </p>
-          <pre class="hero-subtitile">
+          <p class="hero-subtitile">
             <ul class="hero-subtitile">These treatments are also not suitable for individuals with any of the following conditions:
 
             <li>History of high blood pressure</li>
@@ -506,7 +506,7 @@
             
             If you have any medical concerns, please consult your healthcare provider before booking a massage.
             </ul>
-          </pre>
+          </p>
           </div>
         </div>
       </section>
