--- a/treatments.html
+++ b/treatments.html
@@ -486,15 +486,15 @@
           <p class="hero-subtitile">
             These treatments are also not suitable for individuals with any of the following conditions:
           </p>
-             <P class="hero-subtitle">History of high blood pressure</P>
-             <P class="hero-subtitle">Diabetes</P>
-             <P class="hero-subtitle">Cancer</P>
-             <P class="hero-subtitle">Recent surgeries</P>
-             <P class="hero-subtitle">Open wounds</P>
-             <P class="hero-subtitle">Bleeding disorders</P>
-             <P class="hero-subtitle">Use of blood thinners</P>
-             <P class="hero-subtitle">Deep vein thrombosis (DVT)</P>
-             <P class="hero-subtitle">Certain spinal conditions</P>
+             <p class="hero-subtitle">History of high blood pressure</p>
+             <p class="hero-subtitle">Diabetes</p>
+             <p class="hero-subtitle">Cancer</p>
+             <p class="hero-subtitle">Recent surgeries</p>
+             <p class="hero-subtitle">Open wounds</p>
+             <p class="hero-subtitle">Bleeding disorders</p>
+             <p class="hero-subtitle">Use of blood thinners</p>
+             <p class="hero-subtitle">Deep vein thrombosis (DVT)</p>
+             <p class="hero-subtitle">Certain spinal conditions</p>
           <p class="hero-subtitile">
             If you have any medical concerns, please consult your healthcare provider before booking a massage.
           </p>  
