--- a/treatments.html
+++ b/treatments.html
@@ -483,19 +483,19 @@
           <p class="hero-subtitle" >
               Sports massage, Yoga massage and Stretch massage isn't typically recommended for pregnant women.  
           </p>
-          <p class="hero-subtitile">
+          <p class="hero-subtitle">
             These treatments are also not suitable for individuals with any of the following conditions:
           </p>
-             <p class="hero-subtitle">History of high blood pressure</p>
-             <p class="hero-subtitle">Diabetes</p>
-             <p class="hero-subtitle">Cancer</p>
-             <p class="hero-subtitle">Recent surgeries</p>
-             <p class="hero-subtitle">Open wounds</p>
-             <p class="hero-subtitle">Bleeding disorders</p>
-             <p class="hero-subtitle">Use of blood thinners</p>
-             <p class="hero-subtitle">Deep vein thrombosis (DVT)</p>
-             <p class="hero-subtitle">Certain spinal conditions</p>
-          <p class="hero-subtitile">
+             <p class="bd-pink section-title">- History of high blood pressure</p>
+             <p class="bd-pink section-title">- Diabetes</p>
+             <p class="bd-pink section-title">- Cancer</p>
+             <p class="bd-pink section-title">- Recent surgeries</p>
+             <p class="bd-pink section-title">- Open wounds</p>
+             <p class="bd-pink section-title">- Bleeding disorders</p>
+             <p class="bd-pink section-title">- Use of blood thinners</p>
+             <p class="bd-pink section-title">- Deep vein thrombosis (DVT)</p>
+             <p class="bd-pink section-title">- Certain spinal conditions</p>
+          <p class="hero-subtitle">
             If you have any medical concerns, please consult your healthcare provider before booking a massage.
           </p>  
           </div>
