--- a/treatments.html
+++ b/treatments.html
@@ -483,7 +483,7 @@
           <p class="hero-subtitle" >
               Sports massage, Yoga massage and Stretch massage isn't typically recommended for pregnant women. These treatments are also not suitable for individuals with any of the following conditions: History of high blood pressure, Diabetes, Cancer, Recent surgeries, Open wounds, Bleeding disorders, Use of blood thinners, Deep vein thrombosis (DVT), Certain spinal conditions
           </p>  
-          <p class="hero-subtitle">
+          <p class="bd-pink section-title text-center">
             If you have any medical concerns, please consult your healthcare provider before booking a massage.
           </p>  
           </div>
