--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="container">
           <div class="video-player text-center">
             <h2 class="h2 bg-dark text-center ">Relax, Rejuvenate, Restore - Experience the Art of Healing Touch</h2>
-            <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
+            <P class="hero-subtitle text-center">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
             <br>
             <video controls poster="./assets/images/wellness-banner.jpg" class="video-player">
               <source src="./assets/videos/relax.mp4" type="video/mp4" width="450" height="450" alt="Relaxation video">
@@ -140,7 +140,7 @@
       <section class="section class has-bg-image" id="class" aria-label="class">
         <div class="container">
           <h2 class="h2 text-center bg-dark">Treatments</h2>
-          <p class="class-subtitle">Let's Relax Stockholm offers a variety of treatments such as Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy
+          <p class="class-subtitle text-center">Let's Relax Stockholm offers a variety of treatments such as Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy
           and Hot coconut oil massage</p>
 
           <ul class="class-list has-scrollbar">
