--- a/about.html
+++ b/about.html
@@ -148,15 +148,14 @@
           <P class="section-text-about">Our highly trained team offers a range of services tailored to your individual needs, whether you're looking to ease muscle tension, recover from workouts, or simply unwind.</P></div>
         </div>
       </section>
-      <section class="section">
-        <div class="container-img">
+      <section class="section hero has-after has-bg-image">
+        <div class="container">
           <img src="./assets/images/85-enter.jpeg" alt="Wallingatan 37 entrant" width="380" height="380">
           <img src="./assets/images/85Kliniken.jpg" alt="85 Kliniken entrant " width="380" height="380">
           <img src="./assets/images/waitingroom.JPG" alt="85 Kliniken waiting area" width="380" height="380">
           <img src="./assets/images/waitingroom2.JPG" alt="85 Kliniken waiting area" width="380" height="380">
           <img src="./assets/images/waitingroom3.JPG" alt="85 Kliniken waiting area" width="380" height="380">
-          <img src="./assets/images/waitingroom4.JPG" alt="85 Kliniken waiting area" width="380" height="380">
-          
+          <img src="./assets/images/waitingroom4.JPG" alt="85 Kliniken waiting area" width="380" height="380"> 
         </div>
       </section>
     </article>
