--- a/about.html
+++ b/about.html
@@ -150,8 +150,8 @@
       </section>
       <section class="section hero has-after has-bg-image">
         <div class="container">
-          <img src="./assets/images/85-enter.jpeg" alt="Wallingatan 37 entrant" width="380" height="348" loading="lazy">
-          <img src="./assets/images/85Kliniken.jpeg" alt="85 Kliniken entrant " width="380" height="348" loading="lazy">
+          <img src="./assets/images/85-enter.jpeg" alt="Wallingatan 37 entrance" width="380" height="348" loading="lazy">
+          <img src="./assets/images/85Kliniken.jpeg" alt="85 Kliniken entrance " width="380" height="348" loading="lazy">
           <img src="./assets/images/waitingroom.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy">
           <img src="./assets/images/waitingroom2.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy">
           <img src="./assets/images/waitingroom3.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy">
