--- a/index.html
+++ b/index.html
@@ -122,6 +122,26 @@
         </div>
       </section>
 
+       <section class="section hero" id="about" aria-label="about">
+        <div class="container">
+          
+          <div class="hero-content text-center">
+            <h2 class="contact-title">🌸 Promotion 🌸</h2>
+            <img class="img" src="./assets/images/Summer.png" width="360" height="348" loading="lazy" alt="about banner"
+              >
+                
+          </div>
+
+          <div class="about-content">
+            <h2 class="hero-subtitle"> <strong class="strong">🌸 Summer 20% off! 🌸</strong>
+              </h2>
+            <br>
+            <img class="img" src="./assets/images/massage-me.JPG" width="360" height="348" loading="lazy" alt="Treatment room"
+             >
+              <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
+          </div>     
+      </section>   
+
       <!--- #VIDEO-->
       <section class="section video" aria-label="video">
         <div class="container">
