--- a/contact.html
+++ b/contact.html
@@ -125,16 +125,15 @@
           <div class="hero-banner"> 
             
             <img class="w-100" src="./assets/images/NoWalkin.png" alt="" width="360" height="360" loading="lazy">
-          </div> 
-      
+          </div>   
+        </div> 
+      </section> 
 
-          <div class=" hero-content">
+      <section class="section hero has-after has-bg-image">
+        <div class=" hero-content">
             <h2 class="contact-title hero-title">Visit Us:</h2>
             <p class="hero-subtitle" style="align-items: center">
               <strong class="strong">No Walk-ins</strong>Appointment Only! 
-            </p>
-            <p class="hero-subtitle" style="align-items: center">
-              <strong class="strong">Wallingatan 37</strong>Inside 85 Kliniken 
             </p>
             <p class="section-text">   
              Just a 5-minute walk from Clarion Hotel Sign, near the Arlanda Express terminal and Stockholm Central Station (T-Centralen)
@@ -143,10 +142,12 @@
         <div class="img">
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8140.013054363591!2d18.019176643485444!3d59.332899340045174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d5fb784ce65%3A0x1b1af122c0db19cf!2sLet%E2%80%99s%20Relax%20Best%20Massage%20Stockholm!5e0!3m2!1sen!2sse!4v1732303620154!5m2!1sen!2sse"  width="400" height="400" style="border:0; " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        </div> 
-      </section> 
+      </section>
 
        <section class="section hero has-after has-bg-image">
+          <p class="hero-subtitle" style="align-items: center">
+              <strong class="strong">Wallingatan 37</strong>Inside 85 Kliniken 
+          </p>
         <div class="container">
           <img src="./assets/images/waitingroom.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy">
           <img src="./assets/images/waitingroom2.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy">
