--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </section>
 
        <section class="section hero" id="about" aria-label="about">
-        <h2 class="h2 bg-dark text-center ">Relax, Rejuvenate, Restore - Experience the Art of Healing Touch</h2>
+        <p class="class-subtitle text-center ">Relax, Rejuvenate, Restore - Experience the Art of Healing Touch</p>
         <div class="container">
           <div class="hero-content text-center">
             <h2 class="contact-title">🌸 Promotion 🌸</h2>
