--- a/contact.html
+++ b/contact.html
@@ -127,14 +127,16 @@
             <img class="w-100" src="./assets/images/NoWalkin.png" alt="" width="360" height="360" loading="lazy">
           </div> 
 
-          <div class=" hero-content">
+          <div class=" hero-content section">
             <h2 class="contact-title hero-title">Visit Us:</h2>
             <p class="hero-subtitle" style="align-items: center">
               <strong class="strong">No Walk-ins</strong>Appointment Only! 
             </p>
-            <p class="hero-subtitle" style="align-items: center">
-              <strong class="strong">Wallingatan 37</strong>Inside 85 Kliniken 
+            <br>
+            <p class="hero-subtitle " style="align-items: center">
+              <strong class=" strong">Wallingatan 37</strong>Inside 85 Kliniken 
             </p>
+            <br>
             <p class="section-text">   
              Just a 5-minute walk from Clarion Hotel Sign, near the Arlanda Express terminal and Stockholm Central Station (T-Centralen)
             </p>
@@ -145,11 +147,7 @@
         </div> 
       </section> 
 
-      <section class="section hero has-after has-bg-image">
-        
-      </section>
-
-       <section class="section hero has-after has-bg-image">
+       <section class="hero has-after has-bg-image">
           
         <div class="container">
           <img src="./assets/images/waitingroom.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy">
