--- a/wellness.html
+++ b/wellness.html
@@ -167,9 +167,9 @@
       </section>
 
 <!--- #Wellness -->
-      <section class="section blog container" id="blog" aria-label="blog">
-        <div class="section blog-feed">
-          <h2 class="hero-subtitle text-center">Latest
+      <section class="section blog container " id="blog" aria-label="blog">
+        <div class="blog-feed">
+          <h2 class="hero-subtitle">Latest
              Blog Feed 👩🏻‍💻</h2>
         </div>
         <!-- #Blog-3-->
