--- a/index.html
+++ b/index.html
@@ -147,9 +147,8 @@
       <!--- #VIDEO-->
       <section class="section video" aria-label="video">
         <div class="container">
-          <div class="video-player text-center">
+          <div class="section video-player text-center">
             
-            <br>
             <P class="hero-subtitle text-center">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
             <br>
             <video controls poster="./assets/images/wellness-banner.jpg" class="video-player">
