--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
             </p>
             <br>
             <p class="section-text">   
-             Just a 5-minute walk from Clarion Hotel Sign, near the Arlanda Express terminal and Stockholm Central Station (T-Centralen)
+             Just a 5-minute walk from the Arlanda Express terminal and Stockholm Central Station (T-Centralen) near Clarion sign hotel.
             </p>
           </div>
         <div class="img">
