--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             
             
             <p class="section-text">
-              Welcome to Let's Relax Massage. Located in Stockholm, best massage therapy in the city where your journey to a healthier, stress-free lifestyle begins. 
+              Welcome to Let's Relax Massage. Located on Wallingatan 37 just 5-minute walk from Arlanda Express and Stockholm Central Station, best massage therapy in the city where your journey to a healthier, stress-free lifestyle begins. 
             </p> 
             <p class="section-text">
               Whether you're seeking relief from stress, muscle tension, or simply a moment of peace, our skilled therapists provide a personalized experience that leaves you feeling refreshed and renewed. 
