--- a/contact.html
+++ b/contact.html
@@ -150,11 +150,11 @@
 
        <section class="hero">  
         <div class="container">
-          <img src="./assets/images/waitingroom.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round-border">
-          <img src="./assets/images/waitingroom2.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round-border">
-          <img src="./assets/images/waitingroom3.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round-border">
-          <img src="./assets/images/waitingroom4.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round-border"> 
-          <img src="./assets/images/85-enter.jpeg" alt="Wallingatan 37 entrance" width="380" height="348" loading="lazy" class="round-border">
+          <img src="./assets/images/waitingroom.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round-border margin">
+          <img src="./assets/images/waitingroom2.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round-border margin">
+          <img src="./assets/images/waitingroom3.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round-border margin">
+          <img src="./assets/images/waitingroom4.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round-border margin"> 
+          <img src="./assets/images/85-enter.jpeg" alt="Wallingatan 37 entrance" width="380" height="348" loading="lazy" class="round-border margin">
           <img src="./assets/images/85Kliniken.jpeg" alt="85 Kliniken entrance " width="380" height="348" loading="lazy" class="round-border">
         </div>
       </section>  
