--- a/index.html
+++ b/index.html
@@ -124,10 +124,11 @@
           </div>
         </div>
         <br><br><br><br>
-        <div class="container">
-          <img src="./assets/images/waitingroom.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round">
-          <img src="./assets/images/waitingroom2.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round">
-          <img src="./assets/images/waitingroom3.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round">
+        <div class="container">         
+            <img src="./assets/images/waitingroom.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round margin">
+          
+          <img src="./assets/images/waitingroom2.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round margin">
+          <img src="./assets/images/waitingroom3.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round margin">
           <img src="./assets/images/waitingroom4.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round"> 
         </div>
       </section>
