--- a/treatments.html
+++ b/treatments.html
@@ -132,12 +132,13 @@
       <!--- Treatments-->
       <section class="section class has-bg-image" id="class" aria-label="class">
         <div class="container">
-          <h2 class="section-title text-center">Welllness Treatments</h2>
+          
           <p class="hero-subtitle">
               Relax Your mind <strong class="strong">Heal Your Body</strong> Refresh Your Soul
           </p>
-          <p class="hero-subtitle">Pamper yourself with our treatments such as Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy and Hot coconut oil massage</p>
-
+          <div class="hero-subtitle section">
+            <p class="text-center">Pamper yourself with our treatments such as <strong class="strong">Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy and Hot coconut oil massage </strong> </p>
+          </div>
           <ul class="class-list has-scrollbar">
             <li class="scrollbar-item">
               <div class="class-card">
