--- a/treatments.html
+++ b/treatments.html
@@ -133,7 +133,7 @@
       <section class="section class has-bg-image" id="class" aria-label="class">
         <div class="container">
           
-          <p class="hero-subtitle">
+          <p class="hero-subtitle text-center">
               Relax Your mind <strong class="strong">Heal Your Body</strong> Refresh Your Soul
           </p>
           <div class="hero-subtitle section">
