--- a/treatments.html
+++ b/treatments.html
@@ -132,10 +132,11 @@
       <!--- Treatments-->
       <section class="section class has-bg-image" id="class" aria-label="class">
         <div class="container">
-          
-          <p class="hero-subtitle text-center">
+          <div class="hero-subtitle">
+            <p class="text-center">
               Relax Your mind <strong class="strong">Heal Your Body</strong> Refresh Your Soul
-          </p>
+            </p>
+          </div>
           <div class="hero-subtitle section">
             <p class="text-center">Pamper yourself with our treatments such as <strong class="strong">Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy and Hot coconut oil massage </strong> </p>
           </div>
