--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="hero-banner">
             
             <p class="hero-subtitle  text-center ">Experience the Art of Healing Touch
-               <strong class="strong">Relax 💆🏻‍♀️  Rejuvenate 🧖🏻‍♀️ Restore 🧘🏻‍♀️</strong>
+               <strong class="strong">Relax, Rejuvenate, Restore 💆🏻‍♀️</strong>
             </p>
             <br>
             <img src="./assets/images/spa-time-banner.webp" width="250" height="194" alt="let's relax massage" class="w-100"> 
