--- a/treatments.html
+++ b/treatments.html
@@ -706,7 +706,7 @@
             </div>
 
             <address class="address footer-link">
-              Wallingatan, 111 24 Stockholm, Sweden
+              Wallingatan 37, 111 24 Stockholm, Sweden
             </address></a>
           </li>
 
