--- a/en/about.html
+++ b/en/about.html
@@ -11,28 +11,28 @@
   <!-- 
     - favicon
   -->
-    <link rel="shortcut icon" href="favIcon-relax.webp" type="image/svg+xml">
+    <link rel="shortcut icon" href="../favIcon-relax.webp" type="image/svg+xml">
 
   <!-- 
     - Google fonts link
   -->
-  <link rel="preload" as="image" href="./assets/images/FirstTime.webp">
-  <link rel="preload" as="image" href="./assets/images/weight-lifting.svg">
-  <link rel="preload" as="image" href="./assets/images/fitness-banner.webp">
-  <link rel="preload" as="image" href="./assets/images/sports.webp">
-  <link rel="preload" as="image" href="./assets/images/reflexology-foot-massage.webp">
-  <link rel="preload" as="image" href="./assets/images/Office syndrome.webp">
-  <link rel="preload" as="image" href="./assets/images/Yoga-massage.webp">
-  <link rel="preload" as="image" href="./assets/images/stretch.webp">
-  <link rel="preload" as="image" href="./assets/images/back
+  <link rel="preload" as="image" href="../assets/images/FirstTime.webp">
+  <link rel="preload" as="image" href="../assets/images/weight-lifting.svg">
+  <link rel="preload" as="image" href="../assets/images/fitness-banner.webp">
+  <link rel="preload" as="image" href="../assets/images/sports.webp">
+  <link rel="preload" as="image" href="../assets/images/reflexology-foot-massage.webp">
+  <link rel="preload" as="image" href="../assets/images/Office syndrome.webp">
+  <link rel="preload" as="image" href="../assets/images/Yoga-massage.webp">
+  <link rel="preload" as="image" href="../assets/images/stretch.webp">
+  <link rel="preload" as="image" href="../assets/images/back
   &foot-massage.webp">
-  <link rel="preload" as="image" href="./assets/images/hotoil.webp">
-  <link rel="preload" as="image" href="./assets/images/aromatherapy-massage.web
+  <link rel="preload" as="image" href="../assets/images/hotoil.webp">
+  <link rel="preload" as="image" href="../assets/images/aromatherapy-massage.web
   p">
-  <link rel="preload" as="image" href="./assets/images/swipe-left.svg">
-  <link rel="preload" as="image" href="./assets/images/footer-clock.png">
-  <link rel="preload" as="image" href="./assets/blog/Self Care.webp">
-  <link rel="preload" as="image" href="./assets/images/wellness-banner.webp">
+  <link rel="preload" as="image" href="../assets/images/swipe-left.svg">
+  <link rel="preload" as="image" href="../assets/images/footer-clock.png">
+  <link rel="preload" as="image" href="../assets/blog/Self Care.webp">
+  <link rel="preload" as="image" href="../assets/images/wellness-banner.webp">
 
   <!-- 
     - Google fonts link
@@ -44,31 +44,31 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
 
   <!--- preload images -->
-  <link rel="preload" as="image" href="./assets/images/hero-banner.webp">
-  <link rel="preload" as="image" href="./assets/images/hero-circle-one.png">
-  <link rel="preload" as="image" href="./assets/images/hero-circle-two.png">
-  <link rel="preload" as="image" href="./assets/images/heart-rate.svg">
-  <link rel="preload" as="image" href="./assets/images/calories.svg">
-  <link rel="preload" as="image" href="./assets/images/FirstTime.webp">
-  <link rel="preload" as="image" href="./assets/images/weight-lifting.svg">
-  <link rel="preload" as="image" href="./assets/images/fitness-banner.webp">
-  <link rel="preload" as="image" href="./assets/images/sports.webp">
-  <link rel="preload" as="image" href="./assets/images/reflexology-foot-massage.webp">
-  <link rel="preload" as="image" href="./assets/images/Office syndrome.webp">
-  <link rel="preload" as="image" href="./assets/images/Yoga-massage.webp">
-  <link rel="preload" as="image" href="./assets/images/stretch.webp">
-  <link rel="preload" as="image" href="./assets/images/back
+  <link rel="preload" as="image" href="../assets/images/hero-banner.webp">
+  <link rel="preload" as="image" href="../assets/images/hero-circle-one.png">
+  <link rel="preload" as="image" href="../assets/images/hero-circle-two.png">
+  <link rel="preload" as="image" href="../assets/images/heart-rate.svg">
+  <link rel="preload" as="image" href="../assets/images/calories.svg">
+  <link rel="preload" as="image" href="../assets/images/FirstTime.webp">
+  <link rel="preload" as="image" href="../assets/images/weight-lifting.svg">
+  <link rel="preload" as="image" href="../assets/images/fitness-banner.webp">
+  <link rel="preload" as="image" href="../assets/images/sports.webp">
+  <link rel="preload" as="image" href="../assets/images/reflexology-foot-massage.webp">
+  <link rel="preload" as="image" href="../assets/images/Office syndrome.webp">
+  <link rel="preload" as="image" href="../assets/images/Yoga-massage.webp">
+  <link rel="preload" as="image" href="../assets/images/stretch.webp">
+  <link rel="preload" as="image" href="../assets/images/back
   &foot-massage.webp">
-  <link rel="preload" as="image" href="./assets/images/hotoil.webp">
-  <link rel="preload" as="image" href="./assets/images/aromatherapy-massage.web
+  <link rel="preload" as="image" href="../assets/images/hotoil.webp">
+  <link rel="preload" as="image" href="../assets/images/aromatherapy-massage.web
   p">
-  <link rel="preload" as="image" href="./assets/images/swipe-left.svg">
-  <link rel="preload" as="image" href="./assets/images/footer-clock.png">
-  <link rel="preload" as="image" href="./assets/blog/Self Care.webp">
-  <link rel="preload" as="image" href="./assets/images/wellness-banner.webp">
+  <link rel="preload" as="image" href="../assets/images/swipe-left.svg">
+  <link rel="preload" as="image" href="../assets/images/footer-clock.png">
+  <link rel="preload" as="image" href="../assets/blog/Self Care.webp">
+  <link rel="preload" as="image" href="../assets/images/wellness-banner.webp">
 </head>
 
 <body id="top">
@@ -76,7 +76,7 @@
   <header class="header" data-header>
     <div class="container bg-dark">
       <a href="treatments.html" class="logo">
-        <img src="./assets/images/class-yoga-massage.png" width="98" height="98" alt="yoga logo">
+        <img src="../assets/images/class-yoga-massage.png" width="98" height="98" alt="yoga logo">
         <span class="span">Treatments</span>
       </a>
 
@@ -106,6 +106,11 @@
             <a href="contact.html" class="navbar-link" data-nav-link>Contact</a>
           </li>
         </ul>
+        <div class="language-switcher">
+          <a href="/en/about.html" id="lang-en" class="lang-link">English</a>
+          <span class="lang-separator">|</span>
+          <a href="/sv/about.html" id="lang-sv" class="lang-link">Svenska</a>
+        </div>
       </nav>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
@@ -139,7 +144,7 @@
           </div>
 
           <div class="hero-banner">
-            <img  src="./assets/images/hero-banner.jpeg" width="380" height="380" alt="hero banner" class="w-100 profile-about">
+            <img  src="../assets/images/hero-banner.jpeg" width="380" height="380" alt="hero banner" class="w-100 profile-about">
            <p class="hero-subtitle">
               Helping People Feel Better Since 2012
             </p>
@@ -173,7 +178,7 @@
 
           <div class="wrapper">
 
-            <img src="./assets/images/footer-clock.webp" width="34" height="34" loading="lazy" alt="Clock">
+            <img src="../assets/images/footer-clock.webp" width="34" height="34" loading="lazy" alt="Clock">
 
             <ul class="footer-brand-list">
 
@@ -308,7 +313,7 @@
   </a>
 
   <!--- custom js link-->
-  <script src="./assets/js/script.js" defer></script>
+  <script src="../assets/js/script.js" defer></script>
 
   <!--- ionicon link-->
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
