add links head section for SEO

--- a/en/wellness.html
+++ b/en/wellness.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Experience ultimate relaxation at Let's relax, Stockholm's best massage therapy and affordable deep tissue massage. Book your personalized session today for relaxation and a healthier lifestyle! Relaxation massage near me Stockholm">
+
+  <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/wellness.html" />
+  <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/valbefinnande.html" />
+  <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/wellness.html" />
+
   <title>Relaxation & Wellness in Stockholm | Let's relax</title>
 
   <!-- 
