--- a/en/about.html
+++ b/en/about.html
@@ -8,6 +8,10 @@
   <meta name="description" content="Experience ultimate relaxation at Let's relax, Stockholm's best massage therapy and affordable deep tissue massage. Book your personalized session today for relaxation and a healthier lifestyle! Relaxation massage near me Stockholm">
   <title>Relaxation & Wellness in Stockholm | Let's relax</title>
 
+  <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/about.html" />
+  <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/om-oss.html" />
+  <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/about.html" />
+
   <!-- 
     - favicon
   -->
