--- a/en/contact.html
+++ b/en/contact.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Experience ultimate relaxation at Let's Relax, Stockholm's leading massage and wellness center. Book your personalized session today!">
+
+  <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/contact.html" />
+  <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/kontakt.html" />
+  <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/contact.html" />
+
   <title>Relaxation & Wellness in Stockholm | Let's relax</title>
 
   <!-- 
