--- a/sv/behandlingar.html
+++ b/sv/behandlingar.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Upplev total avkoppling på Let's Relax, Stockholms bästa massageterapi och prisvärda djupgående massage. Boka din personliga session idag för avkoppling och en hälsosammare livsstil! Avslappningsmassage nära mig Stockholm">
+
+  <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/treatments.html" />
+  <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/behandlingar.html" />
+  <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/treatments.html" />
+  
   <title>Avkoppling & Välbefinnande i Stockholm | Let's Relax</title>
 
   <link rel="shortcut icon" href="../favIcon-relax.webp" type="image/svg+xml">
