--- a/sv/index.html
+++ b/sv/index.html
@@ -13,6 +13,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Rubik:wght@500&display=swap" rel="stylesheet">
+
+  <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/index.html" />
+  <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/index.html" />
+  <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/index.html" />
   
   <link rel="stylesheet" href="../assets/css/style.css">
   
