--- a/en/contact.html
+++ b/en/contact.html
@@ -67,7 +67,7 @@
             <a href="wellness.html" class="navbar-link" data-nav-link>Wellness</a>
           </li>
           <li>
-            <a href="contact.html" class="navbar-link active" data-nav-link>Contact</a>
+            <a href="#" class="navbar-link active" data-nav-link>Contact</a>
           </li>
         </ul>
 
