--- a/sv/om-oss.html
+++ b/sv/om-oss.html
@@ -58,9 +58,9 @@
         </ul>
 
         <div class="language-switcher">
-          <a href="/en/index.html" id="lang-en" class="lang-link">English</a>
+          <a href="/en/about.html" id="lang-en" class="lang-link">English</a>
          <span class="lang-separator">|</span>
-          <a href="/sv/index.html" id="lang-sv" class="lang-link">Svenska</a>
+          <a href="/sv/om-oss.html" id="lang-sv" class="lang-link">Svenska</a>
         </div>
       </nav>
 
