--- a/sv/valbefinnande.html
+++ b/sv/valbefinnande.html
@@ -55,7 +55,7 @@
         <div class="language-switcher">
           <a href="/en/wellness.html" id="lang-en" class="lang-link">English</a>
           <span class="lang-separator">|</span>
-          <a href="/sv/wellness.html" id="lang-sv" class="lang-link">Svenska</a>
+          <a href="/sv/valbefinnande.html" id="lang-sv" class="lang-link">Svenska</a>
         </div>
       </nav>
 
