--- a/en/about.html
+++ b/en/about.html
@@ -68,7 +68,7 @@
         <div class="language-switcher">
           <a href="/en/about.html" id="lang-en" class="lang-link">English</a>
           <span class="lang-separator">|</span>
-          <a href="/sv/about.html" id="lang-sv" class="lang-link">Svenska</a>
+          <a href="/sv/om-oss.html" id="lang-sv" class="lang-link">Svenska</a>
         </div>
       </nav>
 
