--- a/sv/behandlingar.html
+++ b/sv/behandlingar.html
@@ -60,7 +60,7 @@
         <div class="language-switcher">
           <a href="/en/treatments.html" id="lang-en" class="lang-link">English</a>
           <span class="lang-separator">|</span>
-         <a href="/sv/treatments.html" id="lang-sv" class="lang-link">Svenska</a>
+         <a href="/sv/behandlingar.html" id="lang-sv" class="lang-link">Svenska</a>
         </div>
       </nav>
 
