modified script and update language switcher

--- a/en/index.html
+++ b/en/index.html
@@ -64,10 +64,11 @@
         </ul>
 
         <div class="language-switcher">
-          <a href="/en/index.html" id="lang-en" class="lang-link">English</a>
-         <span class="lang-separator">|</span>
-          <a href="/sv/index.html" id="lang-sv" class="lang-link">Svenska</a>
+          <a href="#" id="lang-en" class="lang-link">English</a>
+          <span class="lang-separator">|</span>
+          <a href="#" id="lang-sv" class="lang-link">Svenska</a>
         </div>
+
       </nav>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
