--- a/en/about.html
+++ b/en/about.html
@@ -66,10 +66,10 @@
           </li>
         </ul>
         <div class="language-switcher">
-          <a href="/en/about.html" id="lang-en" class="lang-link">English</a>
+          <a href="#" id="lang-en" class="lang-link">English</a>
           <span class="lang-separator">|</span>
-          <a href="/sv/om-oss.html" id="lang-sv" class="lang-link">Svenska</a>
-        </div>
+          <a href="#" id="lang-sv" class="lang-link">Svenska</a>
+        </d>
       </nav>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
