--- a/en/contact.html
+++ b/en/contact.html
@@ -72,10 +72,10 @@
         </ul>
 
         <div class="language-switcher">
-          <a href="/en/contact.html" id="lang-en" class="lang-link">English</a>
+          <a href="#" id="lang-en" class="lang-link">English</a>
           <span class="lang-separator">|</span>
-          <a href="/sv/kontakt.html" id="lang-sv" class="lang-link">Svenska</a>
-        </div>
+          <a href="#" id="lang-sv" class="lang-link">Svenska</a>
+        </d>
       </nav>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
