--- a/sv/index.html
+++ b/sv/index.html
@@ -57,10 +57,10 @@
         </ul>
 
         <div class="language-switcher">
-          <a href="/en/index.html" id="lang-en" class="lang-link">English</a>
-         <span class="lang-separator">|</span>
-          <a href="/sv/index.html" id="lang-sv" class="lang-link">Svenska</a>
-        </div>
+          <a href="#" id="lang-en" class="lang-link">English</a>
+          <span class="lang-separator">|</span>
+          <a href="#" id="lang-sv" class="lang-link">Svenska</a>
+        </d>
       </nav>
 
       <button class="nav-open-btn" aria-label="öppna meny" data-nav-toggler>
